# s4dutil

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  build.sh  install.sh  s4dutil.sh
.github/: release.yml
.github/workflows/: build.yml
config/: menu.toml
scripts/: 00-check-environment.sh  01-partition-disk.sh  02-format-partitions.sh  03-mount-partitions.sh  04-install-base.sh  05-generate-fstab.sh  06-configure-system.sh  07-setup-users.sh  08-install-bootloader.sh  09-finalize.sh  common.sh
src/: app.cpp  app.hpp  executor.cpp  executor.hpp  installer.cpp  installer.hpp  main.cpp  menu.cpp  menu.hpp  utils.cpp  utils.hpp
tui/: disk.sh  header.sh  install.sh  kernel.sh  summary.sh  system.sh  users.sh
